-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u102, 9
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8165607 | 8u152 | Guru Hb | P3 | Resolved | Fixed | b01 |
| JDK-8171868 | 8u131 | Guru Hb | P3 | Resolved | Fixed | b01 |
The changeset pushed for JDK-8164076 has an incorrect comment that references an unrelated bug (8164960).
http://hg.openjdk.java.net/openjfx/8u-dev/rt/rev/919c7d071c2f
modules/web/src/main/native/Source/JavaScriptCore/inspector/InjectedScript.cpp
+ // JDK-8164960
modules/web/src/main/native/Source/WebCore/inspector/WebInjectedScriptManager.cpp
+ // JDK-8164960
http://hg.openjdk.java.net/openjfx/8u-dev/rt/rev/919c7d071c2f
modules/web/src/main/native/Source/JavaScriptCore/inspector/InjectedScript.cpp
+ // JDK-8164960
modules/web/src/main/native/Source/WebCore/inspector/WebInjectedScriptManager.cpp
+ // JDK-8164960
- backported by
-
JDK-8165607 Incorrect Bug ID in comment for JDK-8164076
-
- Resolved
-
-
JDK-8171868 Incorrect Bug ID in comment for JDK-8164076
-
- Resolved
-
- relates to
-
JDK-8164076 [Windows] JavaFX crash in WebPage.twkOpen in 8u112 when closing WebView while debugging
-
- Resolved
-