8165508: Incorrect Bug ID in comment for JDK-8164076

Reviewed-by: kcr